
*********************************************************************************************************
digiKam 0.11.0-beta1 - Release date: 2009-xx-xx

NEW FEATURES:

General        : Add new Batch Queue Manager.
General        : new tool bar animation banner.

BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 091742 : Batch process auto levels.
002 ==> 149361 : Not all edit actions are available as batch commands (for example auto-levels and gamma correction).
003 ==> 187523 : digiKam crashes on startup (undefined symbol).
004 ==> 187569 : Crash on star removing when filtering by stars.
005 ==> 186549 : digiKam crashes when hovering the bottom part of its.
006 ==> 187641 : Error while loading shared libraries: libkdcraw.so.5.
007 ==> 187429 : Crash on Launch after disable KIPI plugins rotate. 
008 ==> 187937 : Writing tags to files doesn't update modification timestamp.
009 ==> 184687 : Crash after deleting an empty album.
010 ==> 186766 : Crash after finish resize and rename of images in folder.
011 ==> 184953 : Zooming and paning in slideshow / without toolbars.
012 ==> 187508 : Spontaneous crash whilst doing nothing in particular.
013 ==> 188235 : Assigning a color profile to TIFF images does not work anymore with 0.10.0.
014 ==> 