@@ -2,6 +2,5 @@
 
 KDE4_INSTALL_ICONS( ${DATA_INSTALL_DIR}/digikam/icons )
 
-# Install Oxygen icons.
-add_subdirectory(oxygen)
+add_subdirectory(apps)
 add_subdirectory(digikam)
