@@ -1,0 +1,1 @@
+KDE4_INSTALL_ICONS( ${ICON_INSTALL_DIR} )
