@@ -22,4 +22,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 011 ==> 184953 : Zooming and paning in slideshow / without toolbars.
 012 ==> 187508 : Spontaneous crash whilst doing nothing in particular.
 013 ==> 188235 : Assigning a color profile to TIFF images does not work anymore with 0.10.0.
-014 ==> 
+014 ==> 187748 : Install application icons to right path for non-KDE desktops
+015 ==> 
